Mobile overflow fixed

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -6,6 +6,7 @@
 	height: auto;
 	z-index: 3;
 	padding: 1rem 0 0 0;
+	overflow: hidden;
 }
 
 #top-navbar {
